--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <body>
 <div class="container">
   <h1 class="title">
-    <img src="orangehexagon.png" alt="" class="title-icon">
+    <!-- <img src="orangehexagon.png" alt="" class="title-icon"> -->
     View Reviews
   </h1>
   <div class="controls">
